--- a/src/components/ImageList.css
+++ b/src/components/ImageList.css
@@ -29,7 +29,7 @@ html {
     flex-direction: column;
     align-items: center;
     padding-bottom: 30px;
-    
+    margin-top: 20px;
 }
 
 .image-list img {
