--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -28,6 +28,8 @@
     position: absolute;
     right: 10px;
     top: 10px;
+    display: flex;
+    flex-direction: column;
 }
 
 .unsplash-button {
@@ -35,6 +37,7 @@
     border: 1px solid black;
     background-color: rgb(223, 223, 168);
     letter-spacing: 1px;
+    margin-bottom: 10px;
 }
 
 .modal-link {
@@ -51,4 +54,8 @@
     max-width: 100%;
     max-height: 90vh;
     transform: scale(1.5);
+}
+
+.favourites-button:hover {
+    cursor: pointer;
 }
