--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -1,23 +1,80 @@
 @media only screen and (min-width: 1201px) {
-    .ui.form {
+    .search-form {
         width: 50% !important;
     }
 }
 
-.ui.form {
-    top: 50px;
-    width: 90%;
-    margin: 0 auto;
-    font-size: 27px;
+.search-bar {
+    width: 100%;
+    height: 15vh;
+    display: flex;
     position: relative;
-    margin-bottom: 75px;
-    
+    justify-content: center;
 }
 
-input {
+.search-form {
+    width: 90%;
     margin: 0 auto;
+    font-size: 18px;
+    margin-bottom: 75px;
+    height: 5vh;
+    display: flex;
+    justify-content: center;
+    top: 15%;
+    position: absolute;
+}
+
+.ui.input {
+    margin: 0 auto;
+    width: 50%;
     text-align: center;
-    height: 50px;
-    border-radius: 50%;
+    height: 35px;
+    color: lightgrey;
+    border: 1px solid lightgrey;
+}
+
+.return-link {
+    margin-top: 5px;
+}
+
+.ui.input input {
+    text-align: center;
+}
+
+.favourites {
+    margin-top: 15px;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    height: 5vh;
+    right: 0;
+    font-size: 22px;
+    color: grey;
+    padding: 20px;
+}
+
+.favourites-text {
+    margin-left: -15px;
+}
+
+.favourites:hover {
+    cursor: pointer;
+}
+
+.return-link:hover {
+    cursor: pointer;
+}
+
+.circle.outline.icon {
+    position: absolute;
+    right: -5px;
+    top: 0;
+}
+
+.number {
+    position: absolute;
+    left: 35%;
+    font-size: 16px;
+    color: rgb(6, 134, 6);
 }
 
