--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -29,12 +29,14 @@
     width: 50%;
     text-align: center;
     height: 35px;
-    color: lightgrey;
+    color: grey;
+    border-radius: 25px;
     border: 1px solid lightgrey;
 }
 
 .return-link {
-    margin-top: 5px;
+    margin-top: 10px;
+    font-size: 20px;
 }
 
 .ui.input input {
@@ -53,6 +55,10 @@
     padding: 20px;
 }
 
+.divider {
+    border-bottom: 1px solid grey;
+}
+
 .favourites-text {
     margin-left: -15px;
 }
@@ -65,7 +71,7 @@
     cursor: pointer;
 }
 
-.circle.outline.icon {
+.circle.icon {
     position: absolute;
     right: -5px;
     top: 0;
@@ -73,8 +79,39 @@
 
 .number {
     position: absolute;
-    left: 35%;
     font-size: 16px;
-    color: rgb(6, 134, 6);
+    color: white;
 }
+
+.search-history {
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    font-size: 18px;
+    color: lightgrey;
+    width: 100%;
+}
+
+.search-history-items {
+    display: flex;
+}
+
+.search-history-items:hover {
+    cursor: pointer;
+}
+
+.search-item:hover {
+    color: grey;
+}
+
+.clear-history {
+    margin-left: auto;
+}
+
+.clear-history:hover {
+    cursor: pointer;
+    color: grey;
+}
+
 
