Added favourite icon

--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -1,6 +1,8 @@
 .home-page {
     position: relative;
     height: auto;
+    top: 20px;
     width: 100%;
     overflow-x: hidden;
+    color: grey;
 }
