--- a/src/components/FavouritesPage.css
+++ b/src/components/FavouritesPage.css
@@ -1,6 +1,13 @@
 .favourites-page {
     position: relative;
     height: auto;
+    top: 20px;
     width: 100%;
     overflow-x: hidden;
+    color: grey;
+}
+
+.page-title {
+    width: 100%;
+    text-align: center;
 }
