--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -31,7 +31,7 @@
     height: 35px;
     color: grey;
     border-radius: 25px;
-    border: 1px solid lightgrey;
+    border: 2px solid grey;
 }
 
 .return-link {
