--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -22,6 +22,7 @@
     justify-content: center;
     top: 15%;
     position: absolute;
+    
 }
 
 .ui.input {
@@ -29,9 +30,9 @@
     width: 50%;
     text-align: center;
     height: 35px;
-    color: grey;
     border-radius: 25px;
     border: 2px solid grey;
+    
 }
 
 .return-link {
@@ -41,6 +42,8 @@
 
 .ui.input input {
     text-align: center;
+    
+    border-radius: 25px;
 }
 
 .favourites {
@@ -114,4 +117,24 @@
     color: grey;
 }
 
+
+.theme-select {
+    position: absolute;
+    left: 0;
+    top: 15%;
+    display: flex;
+    align-items: center;
+    padding-top: 10px;
+}
+
+.theme-select i {
+    margin-left: 3px;
+    margin-bottom: -8px;
+}
+
+
+.theme-button {
+    cursor: pointer;
+    
+}
 
